# PasswordMannager

./: CMakeLists.txt  Cipher.cpp  Cipher.hpp  Login.cpp  Login.hpp  Operations.cpp  Operations.hpp  file.txt  main.cpp
files/: TODO  logList.txt  password.txt  passwords.txt
